--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   Made with Remarkable!
+   欢迎来到墨雨汀，成都石室中学北湖校区2021届10班！
   </title>
   <link href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/github.min.css" rel="stylesheet"/>
   <style type="text/css">
